feat[ar]/color for project, user and team
